# portamento

./: CMakeLists.txt  README.md  benchmarks.txt  build.sh  debug.sh  main.backup  render.backup
DESIGN/: design.md
src/: database.c  event.c  file.c  image.c  main.c  music_library.c  portamento.h  render.c  structures.c  thread.c
src/audio/: audio_handler.c  audio_handler.h  audio_util.c  audio_util.h
src/audio/filetypes/: filetypes.h  flac_handler.c
